--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,8 +1,10 @@
 :root {
     --font-main: 'Rubik', sans-serif;
     --black-color: #3b434e;
+    --light-gray-color: #ebebeb;
     --white-color: #ffffff;
     --primary-color: #7653fc;
+    --primary-active-color: #5d41cb;
     --red-color: #fc836d;
     --green-color: #1dc37e;
     --light-green-color: #c8f8e4;
@@ -18,6 +20,10 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
+}
+
+*:focus-visible {
+    outline: 2px solid magenta;
 }
 
 html,
