--- a/layout/Footer/Footer.module.css
+++ b/layout/Footer/Footer.module.css
@@ -1,1 +1,54 @@
+.footer {
+    display: grid;
+    grid-template-rows: 1fr;
+    grid-template-columns: auto-fit auto auto-fit auto-fit;
+    grid-template-areas: 'copyright . terms privacy';
+    gap: 1rem;
+    background: var(--primary-color);
+    padding: 2rem 1.6rem;
+}
 
+.footer a:hover {
+    color: var(--gray-color);
+}
+
+.text {
+    display: block;
+    color: #ffffff;
+    font-weight: 500;
+    text-decoration: none;
+}
+
+.copyright {
+    grid-area: copyright;
+}
+
+.terms {
+    grid-area: terms;
+    justify-self: end;
+}
+
+.privacy {
+    grid-area: privacy;
+    justify-self: end;
+}
+
+@media (max-width: 951px) {
+    .footer {
+        grid-template-rows: repeat(3, auto-fit);
+        grid-template-columns: 1fr;
+        grid-template-areas:
+            'copyright'
+            'terms'
+            'privacy';
+        gap: 0.5rem;
+    }
+
+    .terms {
+        justify-self: start;
+    }
+
+    .privacy {
+        justify-self: start;
+    }
+}
