Menu functionality added

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,6 +1,7 @@
 :root {
     --font-main: 'Rubik', sans-serif;
     --black-color: #3b434e;
+    --dark-gray-color: #787d85;
     --gray-color: #b3c0d9;
     --light-gray-color: #ebebeb;
     --white-color: #ffffff;
